
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#2888] Fix problem with elementCache in modX::sendForward()
- [#2610] Allow Elements to be created under a Category when a Category Policy is in effect
- [#2869] Standardize initial parent combo value text on Resource edit page
- [#2736] Colon character ":" added to default FURL Alias Character Restriction Pattern
- [#2889] Ensure that a new Resource gets an alias generated if auto_alias is On
- [#2837] Ensure element properties import escapes <> and provide better error checking
- [#2886] Ensure SimpleXML and XMLWriter extensions are installed when using FC Set import/export
- [#2882] Add hidemenu_default setting for setting default hide from menus on Resources
- Fix issue with derivative Resource types and FC rules
- [#2858] Extra sanity checks to ensure md5 pw is never sent across get/getlist processors for Users, even if user has access level
- [#6] Fix issue with RTL text in nodes in Resource tree
- [#2873] Fix relativity of image urls in drag/drop and TVs when using various filemanager_path/url settings
- [#2878] Ensure resource panel is marked dirty when drag/dropping into TV
- [#2828] Fix issue with incorrect content field name for FC rules
- [#2863] Fix order of execution issues with FC rules and default values
- [#2874] Enhance User blockedafter/blockeduntil fields to accept time as well as date values
- [#2529] Fix automatic publish/unpublish
- Adjust FC rule ranks to properly account for prior FC rules that may affect FC constraints
- Update xPDO to 2.0.0-pl release
- [#2661] Fix Template getList processor to respect authority
- [#313] Fix header error with binary modStaticResource downloads
- [#206] Fix session bug with opcode caching systems like APC, WinCache, eAccelerator
- [#2846] Add tag syntax to description hover text for resource fields